--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ flask==2.2.2
 flask-sqlalchemy==2.5.1
 sqlalchemy==1.4.45
 flask-session
-flask-socketio==4.4.1
+flask-socketio
 python-socketio==5.7.2
 python-dotenv
